chore: byte-buddy disabled, MenuProductFixture 수량 상수로 변경